# distributed-computing-parallelism

./: .gitignore  README.md
mpi/: broadcasting.py  main.py  point-to-poin-communication.py  pyproject.toml  scattering.py  scattering_v.py  sending-np-array.py
multiprocessing/: cpu_bund.py  imap.py  kaiko-task.py  multi-queue.py  multiprocessing-communication.py  multiprocessing-cube.py  multiprocessing-example.py  pool-apply-async.py  pool-apply.py  pool-map-async.py  pool-map.py  pyproject.toml  race_condition.py  server-process.py  sharing-data-array.py  sharing-data.py
