[tool.poetry]
name = "mpi"
version = "0.1.0"
description = ""
authors = ["Rafał Chojnacki <rafalchojnacki0502@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mpi4py = "^3.1.3"
black = "^22.1.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
